s
  File "<string>", line 22
    new_vhost = '''docRoot                   /public_html
                ^
SyntaxError: unterminated triple-quoted string literal (detected at line 42)
